--- a/Chapter 1.ipynb
+++ b/Chapter 1.ipynb
@@ -81,12 +81,12 @@
    "id": "23a9d5a8",
    "metadata": {},
    "source": [
-    "chipotle 데이터셋의 기초 정보 출력하기"
+    "- chipotle 데이터셋의 기초 정보 출력하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "105d2166",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "(4622, 5)\n",
-      "---------------------------------------\n",
+      "------------------------------------\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4622 entries, 0 to 4621\n",
       "Data columns (total 5 columns):\n",
@@ -122,14 +122,125 @@
     "chipo = pd.read_csv(file_path, sep = '\\t')\n",
     "\n",
     "print(chipo.shape)\n",
-    "print(\"---------------------------------------\")\n",
+    "print(\"------------------------------------\")\n",
     "print(chipo.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01a164ed",
+   "metadata": {},
+   "source": [
+    "그리고 shape()와 info() 함수를 호출하면 위와 같은 실행 결과를 볼 수 있다. shape()는 데이터의 행과 열의 크기를 반환하고, info()는 행의 구성 정보와 열의 구성 정보를 나타낸다. 실행 결과를 보면 데이터가 4,622개의 행과 5개의 피처로 구성되어 있음을 알 수 있다. 또한 order_id와 quantity는 int64(숫자),나머지 3개의 피처는 object라는 타입으로 이루어져 있다. 그런데 한 가지 특이한 정보는 choice_description 피처가 3,376개의 non--null object로 구성되어 있다는 것입니다. 이 정보는 무엇을 의미할까? 데이터 프레임에서 object 타입은 일반적으로 **문자열**을 의미 한다. 그리고 null이라는 용어는 데이터가 **비어 있는 것**을 의미한다. 이를 **결측값** 이라고 한다. 즉, '3376 non-null object'라는 것은 3,376개의 비어 있지 않은 문자열 데이터가 있다는 정보이다. 하지만 데이터의 개수를 4,622개이므로 choice_description 피처는 1,246개의 결측값이 존재한다.\n",
+    "\n",
+    "다음 코드를 보자. head(10) 함수는 첫 10개의 데이터를 테이블 형태로 출력합니다.또한 columns(행의 목록)와 index(열의 목록)를 호출하면 데이터의 행과 열에 대한 정보를 함께 출력 할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2a65429",
+   "metadata": {},
+   "source": [
+    "- chipotle 데이터셋의 행과 열, 데이터 확인하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa51270c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['order_id', 'quantity', 'item_name', 'choice_description',\n",
+      "       'item_price'],\n",
+      "      dtype='object')\n",
+      "------------------------------------\n",
+      "RangeIndex(start=0, stop=4622, step=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chipo 라는 데이터 프레임에서 순서대로 10개의 데이터를 보여준다.\n",
+    "chipo.head(10)\n",
+    "\n",
+    "print(chipo.columns)\n",
+    "print(\"------------------------------------\")\n",
+    "print(chipo.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1478b962",
+   "metadata": {},
+   "source": [
+    "이때, chipotle 데이터셋 피처의 의미는 각각 다음과 같습니다.\n",
+    "\n",
+    "- order_id:주문 번호\n",
+    "\n",
+    "- quantity: 아이템의 주문 수량\n",
+    "\n",
+    "- item_name: 주문한 아이템의 이름\n",
+    "\n",
+    "- choice_description: 주문한 아이템의 상세 선택 옵션\n",
+    "\n",
+    "- item_price: 주문 아이템의 가격 정보\n",
+    "\n",
+    "이제 본격적으로 이 피처들의 속성을 파악해 본다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a85ec857",
+   "metadata": {},
+   "source": [
+    "#### quantity와 item_price의 수치적 특징\n",
+    "\n",
+    "우선 quantity와 item_price의 수치적 특징을 살펴본다. 이 두 피처는 **연속형 피처**이다. 연속형 피처는 키와 몸무게 처럼 어떠한 값도 가질 수 있는 연속적인 숫자 형태를 의미한다. 다음 코드의 출력 결과는 describe() 함수가 나타낸 피처의 기초 통계량이다. 하지만 현재 유일하게 존재하는 수치형 피처는 quantity뿐이기 때문에, 오직 quantity에 대한 정보만을 출력할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20dcedb1",
+   "metadata": {},
+   "source": [
+    "- describe()함수로 기초 통계량 출력하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "68497708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          quantity\n",
+      "count  4622.000000\n",
+      "mean      1.075725\n",
+      "std       0.410186\n",
+      "min       1.000000\n",
+      "25%       1.000000\n",
+      "50%       1.000000\n",
+      "75%       1.000000\n",
+      "max      15.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# order_id는 숫자의 의미를 가지지 않기 때문에 str으로 변환한다.\n",
+    "chipo['order_id'] = chipo['order_id'].astype(str)\n",
+    "print(chipo.describe()) # chipo 데이터 프레임에서 수치형 피처들의 기초 통계량을 확인한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9801cc60",
+   "id": "29f4678c",
    "metadata": {},
    "outputs": [],
    "source": []
