--- a/Chapter 1.ipynb
+++ b/Chapter 1.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32ec0e4",
+   "id": "75d23b59",
    "metadata": {},
    "source": [
     "#### order_id와 item_name의 개수\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49c6529",
+   "id": "b5e923b8",
    "metadata": {},
    "source": [
     "- unique() 함수로 범주형 피처의 개수 출력하기"
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "be869eff",
+   "id": "b525fd1c",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f13bd9",
+   "id": "18c95c73",
    "metadata": {},
    "source": [
     "#### step2 인사이트의 발견: 탐색과 시각화 하기\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eedec15",
+   "id": "c0025187",
    "metadata": {},
    "source": [
     "- 가장 많이 주문한 아이템 Top 10 출력하기"
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c8e2784a",
+   "id": "8fafcc45",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2fbf3a",
+   "id": "da83b831",
    "metadata": {},
    "source": [
     "#### 아이템별 주문 개수와 총량\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "451c8cc3",
+   "id": "4b87af12",
    "metadata": {},
    "source": [
     "- 아이템별 주문 개수와 총량 구하기"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cc675806",
+   "id": "4c26c7c4",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1902847",
+   "id": "68534ce4",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f13afa",
+   "id": "84dd424e",
    "metadata": {},
    "source": [
     "위의 코드 chipo.groubpy(\"item_name\")['quantity'].count()는 chipo Dataf에서 item_name을 그룹으로 quantity 피처의 count()를 계산한 것이다.이는 아이템별 주문 개수를 의미한다. 마찬가지 방법으로 chipo.groubpy(item_name)['quantity'].sum()은 아이템별 주문 총량을 나타낸다."
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b94f1e1f",
+   "id": "c93c0ef8",
    "metadata": {},
    "source": [
     "#### 시각화\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d0a784a",
+   "id": "cace7cba",
    "metadata": {},
    "source": [
     "- 시각화로 분석 결과 살펴보기"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "276d4b8a",
+   "id": "2e59dca4",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd25b7f",
+   "id": "116df8c5",
    "metadata": {},
    "source": [
     "#### Step3 데이터 전처리: 전처리 함수 사용하기\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5d8ccd",
+   "id": "3ed0eb31",
    "metadata": {},
    "source": [
     "- item_price 피처 살펴보기"
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "45c0aaad",
+   "id": "f9fe3bd1",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb6e909",
+   "id": "33aed152",
    "metadata": {},
    "source": [
     "데이터 전처리에 앞서 item_price 피처를 살펴본 결과, 가격을 나타내느 숫자 앞에 \"$\"기호가 붙어 있는것을 발견할 수 있다. 따라서 이 피처를 수치 데이터로 사용하기 위해서는 \"$\"기호를 제거해주는 전처리 작업이 필요하다. \"$\"기호를 제거하는 전처리 방법은 chipo['item_price']에 apply()함수를 적용함으로써 가능하다. 그리고 apply()함수에는 lambda라는 함수 명령어를 추가한다."
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f77f12a8",
+   "id": "dc238db6",
    "metadata": {},
    "source": [
     "- apply()와 lambda를 이용해 데이터 전처리하기"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0f69fbd4",
+   "id": "9555c8ee",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4a83ef",
+   "id": "b5ae715b",
    "metadata": {},
    "source": [
     "**apply()** 함수는 **시리즈 단위의 연산**을 처리하는 기능을 수행하며, sum()이나 mean()과 같이 연상이 정의된 함수를 파라미터로 받는다. 따라서 피처 단위의 합계나 평균을 구할 수도 있고, 우리가 정의할 새로운 함수 문자열 데이터에서 첫 번째 문자열을 제거한 뒤 나머지 문자열을 수치형으로 바꿔주는 함수를 파라미터로 입력할 수도 있다. 위의 코드 lambda x:float(x[1:])는 이를 수행하는 함수를 lambda로 정의하여 입력 한 것이다."
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40774520",
+   "id": "b24c392e",
    "metadata": {},
    "source": [
     "#### Step4 탐색적 분석: 스무고개로 개념적 탐색 분석하기\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6cd9b35",
+   "id": "166bc406",
    "metadata": {},
    "source": [
     "- 주문당 평균 계산금액 출력하기\n"
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "222f8825",
+   "id": "8183eaf7",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5592f4a8",
+   "id": "5d8aa0de",
    "metadata": {},
    "source": [
     "#### 한 주문에 10달러 이상 지불한 주문 번호(id) 출력하기\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11babb72",
+   "id": "348f3876",
    "metadata": {},
    "source": [
     "- 한 주문에 10달러 이상 지불한 주문 번호(id) 출력하기"
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7ad0f57b",
+   "id": "500f1f62",
    "metadata": {},
    "outputs": [
     {
@@ -763,9 +763,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94bc59bb",
+   "metadata": {},
+   "source": [
+    "#### 각 아이템의 가격 구하기\n",
+    "\n",
+    "이번에는 각 아이템의 가격을 계산합니다. chipotle 데이터셋에서는 주어진 데이터만으로 각 아이템의 가격을 대략적으로 유추한다. 유추 과정은 다음과 같다.\n",
+    "\n",
+    "- chipo[chipo.quantity ==1]으로 동일 아이템을 1개만 구매한 주문을 선별한다.\n",
+    "\n",
+    "- item_name을 기준으로 groupby 연산을 수행한 뒤, min()함수로 각 그룹별 최처가를 계산한다.\n",
+    "\n",
+    "- item_price를 기준으로 정렬하는 sort_values() 함수를 적용한다. **sort_values()**는 **series 데이터를 정렬**해주는 함수이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96180ae1",
+   "metadata": {},
+   "source": [
+    "- 각 아이템의 가격 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dd037f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>item_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Steak Salad Bowl</th>\n",
+       "      <td>1032</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, Lettuce]</td>\n",
+       "      <td>9.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Barbacoa Salad Bowl</th>\n",
+       "      <td>1283</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, Guacamole]</td>\n",
+       "      <td>9.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnitas Salad Bowl</th>\n",
+       "      <td>1035</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Chees...</td>\n",
+       "      <td>9.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnitas Soft Tacos</th>\n",
+       "      <td>1011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa (Mild), [Black Beans, Rice...</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnitas Crispy Tacos</th>\n",
+       "      <td>1774</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Rice,...</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Steak Soft Tacos</th>\n",
+       "      <td>1054</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa (Mild), [Cheese, Sour Cream]]</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnitas Salad</th>\n",
+       "      <td>1500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[[Fresh Tomato Salsa (Mild), Roasted Chili Cor...</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carnitas Bowl</th>\n",
+       "      <td>1007</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato (Mild), [Guacamole, Lettuce, Ric...</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Barbacoa Soft Tacos</th>\n",
+       "      <td>1103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Black Beans, Cheese, Let...</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Barbacoa Crispy Tacos</th>\n",
+       "      <td>110</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[Fresh Tomato Salsa, Guacamole]</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      order_id  quantity  \\\n",
+       "item_name                                  \n",
+       "Steak Salad Bowl          1032         1   \n",
+       "Barbacoa Salad Bowl       1283         1   \n",
+       "Carnitas Salad Bowl       1035         1   \n",
+       "Carnitas Soft Tacos       1011         1   \n",
+       "Carnitas Crispy Tacos     1774         1   \n",
+       "Steak Soft Tacos          1054         1   \n",
+       "Carnitas Salad            1500         1   \n",
+       "Carnitas Bowl             1007         1   \n",
+       "Barbacoa Soft Tacos       1103         1   \n",
+       "Barbacoa Crispy Tacos      110         1   \n",
+       "\n",
+       "                                                      choice_description  \\\n",
+       "item_name                                                                  \n",
+       "Steak Salad Bowl                           [Fresh Tomato Salsa, Lettuce]   \n",
+       "Barbacoa Salad Bowl                      [Fresh Tomato Salsa, Guacamole]   \n",
+       "Carnitas Salad Bowl    [Fresh Tomato Salsa, [Rice, Black Beans, Chees...   \n",
+       "Carnitas Soft Tacos    [Fresh Tomato Salsa (Mild), [Black Beans, Rice...   \n",
+       "Carnitas Crispy Tacos  [Fresh Tomato Salsa, [Fajita Vegetables, Rice,...   \n",
+       "Steak Soft Tacos       [Fresh Tomato Salsa (Mild), [Cheese, Sour Cream]]   \n",
+       "Carnitas Salad         [[Fresh Tomato Salsa (Mild), Roasted Chili Cor...   \n",
+       "Carnitas Bowl          [Fresh Tomato (Mild), [Guacamole, Lettuce, Ric...   \n",
+       "Barbacoa Soft Tacos    [Fresh Tomato Salsa, [Black Beans, Cheese, Let...   \n",
+       "Barbacoa Crispy Tacos                    [Fresh Tomato Salsa, Guacamole]   \n",
+       "\n",
+       "                       item_price  \n",
+       "item_name                          \n",
+       "Steak Salad Bowl             9.39  \n",
+       "Barbacoa Salad Bowl          9.39  \n",
+       "Carnitas Salad Bowl          9.39  \n",
+       "Carnitas Soft Tacos          8.99  \n",
+       "Carnitas Crispy Tacos        8.99  \n",
+       "Steak Soft Tacos             8.99  \n",
+       "Carnitas Salad               8.99  \n",
+       "Carnitas Bowl                8.99  \n",
+       "Barbacoa Soft Tacos          8.99  \n",
+       "Barbacoa Crispy Tacos        8.99  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 각 아이템의 가격을 계산한다.\n",
+    "chipo_one_item = chipo[chipo.quantity ==1]\n",
+    "price_per_item = chipo_one_item.groupby('item_name').min()\n",
+    "price_per_item.sort_values(by = \"item_price\", ascending = False)[:10]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3e28ff",
+   "id": "23fe7ffc",
    "metadata": {},
    "outputs": [],
    "source": []
