--- a/Chapter 1.ipynb
+++ b/Chapter 1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "105d2166",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "aa51270c",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "68497708",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b127f664",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e9da2613",
    "metadata": {},
    "outputs": [
@@ -318,11 +318,11 @@
       "Top 3 : Chips and Guacamole 479\n",
       "Top 4 : Steak Burrito 368\n",
       "Top 5 : Canned Soft Drink 301\n",
-      "Top 6 : Chips 211\n",
-      "Top 7 : Steak Bowl 211\n",
+      "Top 6 : Steak Bowl 211\n",
+      "Top 7 : Chips 211\n",
       "Top 8 : Bottled Water 162\n",
       "Top 9 : Chicken Soft Tacos 115\n",
-      "Top 10 : Chicken Salad Bowl 110\n"
+      "Top 10 : Chips and Fresh Tomato Salsa 110\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "92a8f730",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "Name: order_id, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "96b2e585",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "Name: quantity, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "79b02ff5",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4b5740de",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-318a91eae0c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchipo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'item_price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-318a91eae0c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchipo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'item_price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
      ]
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3d90a709",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "max      15.000000    44.250000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6217f87d",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
        "18.811428571428568"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "78c978c6",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7ab869ed",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "Barbacoa Crispy Tacos        8.99  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,9 +1022,287 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8163dfa7",
+   "metadata": {},
+   "source": [
+    "#### 가장 비싼 주문에서 아이템이 총 며개 팔렸는지 구하기\n",
+    "\n",
+    "orer_id에 그룹별 합계 연산을 적용한다. 그리고 item_price를 기준으로 sort_values를 반환하면 가장 비싼 주문순으로 연산 결과를 얻을 수 있다. 다음 결과에서는 가장 비싼 주문에서 23개의 아이템을 주문한 것을 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12413bb9",
+   "metadata": {},
+   "source": [
+    "- 가장 비싼 주문에서 아이템이 총 몇개 팔렸는지 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c323ca71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
+       "      <td>23</td>\n",
+       "      <td>205.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1443</th>\n",
+       "      <td>35</td>\n",
+       "      <td>160.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483</th>\n",
+       "      <td>14</td>\n",
+       "      <td>139.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>11</td>\n",
+       "      <td>118.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1786</th>\n",
+       "      <td>20</td>\n",
+       "      <td>114.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          quantity  item_price\n",
+       "order_id                      \n",
+       "926             23      205.25\n",
+       "1443            35      160.74\n",
+       "1483            14      139.00\n",
+       "691             11      118.25\n",
+       "1786            20      114.30"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 가장 비싼 주문에서 아이템이 총 몇개 팔렸는지 구하기\n",
+    "chipo.groupby('order_id').sum().sort_values(by='item_price', ascending=False)[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260381f8",
+   "metadata": {},
+   "source": [
+    "#### 'Veggie Salad Bowl'이 몇 번 주문되었는지 구하기\n",
+    "\n",
+    "이번에는 특정 아이템인 'Veggie Salad Bowl'이 변 번이나 주문되었는지 알아보겠다. 이를 위해 chipo[chipo['item_name'] == 'Veggie Salad Bowl']으로 필터링 한뒤, drop_duplicates()라는 함수를 사용한다. 이는 한 주문 내에서 item_name이 중복 집계된 경우를 제거해주기 위함이다.그리고 최종 결과인 chipo_salad의 길이를 출력하면 Veggie Salad Bowl이 데이터 내에서 몇 번이나 주문되었는지 구할 수 있다. 출력 결과, Veggie Salad Bowl은 총 18번 주문된 것을 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fcd3d08",
+   "metadata": {},
+   "source": [
+    "- 'Veggie Salad Bowl'이 몇 번 주문되었는지 구하기\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "95c334f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Rice,...</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>455</th>\n",
+       "      <td>195</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Rice,...</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>207</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Lettuce, Guacamole...</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>394</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Veggie Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    order_id  quantity          item_name  \\\n",
+       "186       83         1  Veggie Salad Bowl   \n",
+       "295      128         1  Veggie Salad Bowl   \n",
+       "455      195         1  Veggie Salad Bowl   \n",
+       "496      207         1  Veggie Salad Bowl   \n",
+       "960      394         1  Veggie Salad Bowl   \n",
+       "\n",
+       "                                    choice_description  item_price  \n",
+       "186  [Fresh Tomato Salsa, [Fajita Vegetables, Rice,...       11.25  \n",
+       "295  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...       11.25  \n",
+       "455  [Fresh Tomato Salsa, [Fajita Vegetables, Rice,...       11.25  \n",
+       "496  [Fresh Tomato Salsa, [Rice, Lettuce, Guacamole...       11.25  \n",
+       "960  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...        8.75  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 'Veggie Salad Bowl'이 몇 번 주문되었는지를 계산한다.\n",
+    "chipo_salad = chipo[chipo['item_name'] == \"Veggie Salad Bowl\"]\n",
+    "# 한 주문 내에서 중복 집계된 item_name을 제거한다.\n",
+    "chipo_salad = chipo_salad.drop_duplicates(['item_name', 'order_id'])\n",
+    "\n",
+    "print(len(chipo_salad))\n",
+    "chipo_salad.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d2619c8",
+   "metadata": {},
+   "source": [
+    "#### 'Chicken Bowl'을 2개이상 주문한 주문 횟수 구하기\n",
+    "\n",
+    "비슷한 방법으로 'Chicken Bowl'을 2개 이상 주문한 주문 횟수를 구해보자. 먼저 'Chicken Bowl'을 주문한 데이터만을 필터링 한 뒤, 데이터프레임에서 quantity가 2 이상인 것을 선택하면 이 결과가 'Chicken Bowl'을 2개 이상 주문한 주문 횟수를 의미한다. 2개 이상으로 필터링을 적용한 출력 결과는 다음과 같다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "266bfb7c",
+   "metadata": {},
+   "source": [
+    "- \"Chicken Bowl\"을 2개 이상 주문한 주문 횟수 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "50a8872a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"Chicken Bowl\"을 2개 이상 주문한 주문 횟수를 구한다.\n",
+    "chipo_chicken = chipo[chipo['item_name'] == \"Chicken Bowl\"]\n",
+    "chipo_chicken_result = chipo_chicken[chipo_chicken['quantity'] >= 2]\n",
+    "print(chipo_chicken_result.shape[0])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da3c96b",
+   "id": "e53d3a2d",
    "metadata": {},
    "outputs": [],
    "source": []
