--- a/Chapter 4 (titanic).ipynb
+++ b/Chapter 4 (titanic).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5d48b63",
+   "id": "ee758ff7",
    "metadata": {},
    "source": [
     "<center>\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde3f17c",
+   "id": "9a8d3f1e",
    "metadata": {},
    "source": [
     "### 이 장의 핵심 개념\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246601b8",
+   "id": "0c579346",
    "metadata": {},
    "source": [
     "### 4.1 타이타닉의 생존자 가려내기\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "050dd32b",
+   "id": "ee31f246",
    "metadata": {},
    "source": [
     "#### Step1 탐색: 타이타닉 데이터 살펴보기\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4554483",
+   "id": "9ae30966",
    "metadata": {},
    "source": [
     "- 타이타닉 데이터셋의 기본 정보 구하기"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22ab5a25",
+   "id": "e8abf685",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66628895",
+   "id": "633e71d5",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb242b0",
+   "id": "32269469",
    "metadata": {},
    "source": [
     "먼저 name, tiket, body, home.dest, cabin 피처를 제거한다. 이 피처들은 지금 당장 분석에 활용할 수없거나(name, cabin), 큰 의미를 가지고 있지 않은 피처(tiket, home.dest, body)이기 때문이다."
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c422c84a",
+   "id": "38412f90",
    "metadata": {},
    "source": [
     "- 불필요한 피처 제거하기"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "67e1ffc6",
+   "id": "ce48ad23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf35edd",
+   "id": "79440390",
    "metadata": {},
    "source": [
     "다음으로 각 피처가 분류 분석에 미칠 영향에 대해 탐색해 본다. 이를 탐색하는 가장 좋은 방법은 데이터를 그룹(생존자 그룹/비생존자 그룹)으로 나누어 피처의 그룹 간 차이를 탐색하는 것이다. 생존 여부(생존=1, 아닌 경우=0)인 survived를 그룹으로 하여 pclass 피처의 그룹별 분포를 출력한 결과는 아래과 같다. seaborn의 countplot이라는 함수를 사용하면 아래와 같은 그래프를 출력 할 수 있다. 그룹 비율은 약 3:5 정도로 나타났고, 그룹별 pclass의 부포는 상이하게 나타났다. 이를 통해 pclass 피처는 생존자 분류에 유의미한 영향을 미친다는 가설을 세워 볼 수 있다."
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a8ae3dc",
+   "id": "75de5dd1",
    "metadata": {},
    "source": [
     "- 탐색적 데이터 분석하기"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3a99ffee",
+   "id": "a6c33f61",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4b0632a1",
+   "id": "b105196b",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1f4311",
+   "id": "b0f46299",
    "metadata": {},
    "source": [
     "다음으로 age, sibsp와 같은 수치형 피처들에 대한 탐색을 진행한다. 다음의 코드는 이러한 피처들을 탐색할 수 있는 자동화 함수 vaild_feature()를 작성한 것이다. 함수가 실행하는 내용은 다음과 같다."
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a865a7",
+   "id": "9167b0c0",
    "metadata": {},
    "source": [
     "- 두 그룹 간의 분포를 비교하는 그래프를 출력한다.\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7708fba9",
+   "id": "68745c78",
    "metadata": {},
    "source": [
     "- 변수 탐색작업 자동화하기"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e80da21d",
+   "id": "37dbfd66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8a2183",
+   "id": "0f8fbb5e",
    "metadata": {},
    "source": [
     "아래의 실행 결과는 valid_features()를 실행한 것이다. 이를 통해 살펴본 피처는 age, sibsp 두 피처이다."
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84d7743",
+   "id": "1dd8b2cf",
    "metadata": {},
    "source": [
     "- 자동화 함수 실행하기"
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bc0d8ec5",
+   "id": "0abd800e",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d52090f",
+   "id": "17a65a90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f18b7975",
+   "id": "fa5afc91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b31f2be",
+   "id": "405f397a",
    "metadata": {},
    "source": [
     "분석 결과, age 피처는 두 그룹 간의 평균 차이가 없기 때문에 생존자 분류에 미치는 영량력이 낮을것이라고 가정해볼 수 있다. 반면 sibsp 피처에서는 두 그룹 간의 평균 차이가 어느 정도 존재한다는 것을 알 수 있다."
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc051be7",
+   "id": "06406270",
    "metadata": {},
    "source": [
     "#### Step 2 분류: 생존자 분류 모델 만들기\n",
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8c2c28",
+   "id": "fba43eb6",
    "metadata": {},
    "source": [
     "- 분류 모델을 위해 전처리하기"
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fcdc6229",
+   "id": "87cc9cb0",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860890a9",
+   "id": "f9f91587",
    "metadata": {},
    "source": [
     "이제 sklearn 모듈의 LogisticRegression 클래스로 모델을 학습하자"
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e22ce41",
+   "id": "d88d89d8",
    "metadata": {},
    "source": [
     "- 분류 모델링: 로지스틱 회귀 모델\n"
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "df6f2ad0",
+   "id": "6b6722d0",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3eefd34",
+   "id": "bb5546f9",
    "metadata": {},
    "source": [
     "그렇다면 이 모델이 생존자를 얼마나 잘 분류하는지 어떻게 평가할까? 일반적으로 분류 모델의 평가 기준은 Confusion Matrix라는 것을 활용 한다. 다음의 코드는 정확도, 정밀도, 특이도, F1-score 네 가지 지표로 모델을 평가한 것이다. predict()함수로 분류한 예측값들을 sklearn.metrics모듈의 accuracy_score, precision_score, recall_score, f1_score 함수에 적용하면 다음과 같은 출력 결과를 얻을 수 있다.\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d917fc",
+   "id": "d9d8823e",
    "metadata": {},
    "source": [
     "- 분류 모델 평가하기"
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fa468a99",
+   "id": "18c21c8c",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc80b84",
+   "id": "7eb8f6e0",
    "metadata": {},
    "source": [
     "그리고 다음의 코드는 Confusion Matrix를 직접 출력한 것이다."
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "30bc6124",
+   "id": "39031c49",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17e00e4",
+   "id": "3eb4282a",
    "metadata": {},
    "source": [
     "마지막으로 AUC를 출력해보자. AUC 출력은 분류 결과인 0혹은 1의 y값(y_pred)을 사용하는 것이 아니라, 분류 직전의 확률값(y_pred_probability)인 0~1 사이의 값을 사용해야 한다. 아래 코드는 AUC를 출력함과 동시에 ROC Curve를 그래프로 나타낸 것이다. 이 모델의 AUC는 약 0.837로, 생존자를 잘 분류해내는 모델이라고 평가할 수 있다."
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "489079c7",
+   "id": "86ab922a",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aefb90d",
+   "id": "06ae2362",
    "metadata": {},
    "source": [
     "아래 코드와 실행 결과는 로지스틱 회귀 모델과 더불어 분류 분석의 가장 대표적인 방법인 의사결정나무(Decision Tree)모델을 적용한 결과 이다. 하지만 로지스틱 회귀 모델에 비해 모든 평가 지표가 낮은 것을 확인할 수 있다."
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4518e431",
+   "id": "3f75e47b",
    "metadata": {},
    "source": [
     "- 의사결정 나무"
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "57d72b97",
+   "id": "ea753b80",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8927930e",
+   "id": "72aff8bf",
    "metadata": {},
    "source": [
     "#### Step 3 모델 개선: 피처 엔지니어링 첫걸음\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b41ee17b",
+   "id": "59f6076a",
    "metadata": {},
    "source": [
     "- 분류 모델을 위해 전처리하기"
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0ff3d2e5",
+   "id": "890bcae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1fe19f",
+   "id": "ac4835cc",
    "metadata": {},
    "source": [
     "이번에는 cabin 피처와 name 피처를 가공하여 분석에 포함하자. cabin 피처는 선실의 정보를 나타내는 데이터로, 선실을 대표하는 알파벳이 반드시 첫 글자에 등장한다는 패턴을 가지고 있다."
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7585b2e0",
+   "id": "16dbe939",
    "metadata": {},
    "source": [
     "- cabin 피처 활용하기"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1405380f",
+   "id": "a5b37b19",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f771b60",
+   "id": "b6842856",
    "metadata": {},
    "source": [
     "이 피처의 결측 데이터는 알파벳이 없다는 의미의 'X'알파벳으로 채워준다. 그리고 데이터의 수가 매우 적은 G와 T선실 역시 'X'로 대체한다. 마지막으로 cabin 피처에서 첫 번째 알파벳을 추출하기 위해 whole_df['cabin'].apply(lambda x:x[0]) 코드를 실행하자."
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c464eaf4",
+   "id": "4e621e9c",
    "metadata": {},
    "source": [
     "- cabin 피처 활용하기\n"
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "59843b3d",
+   "id": "10bd400e",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04783ad",
+   "id": "ef751e45",
    "metadata": {},
    "source": [
     "전처리가 완료된 cabin 피처의 생존자/비생존자 그룹 간 분포는 위와 같다. 이를 살펴본 결과, 두 그룹 간의 유의미한 차이가 있는 것으로 보인다.따라서 우리는 이 피처를 분류 모델에 사용해볼 수 있다."
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ff40fa",
+   "id": "b0a392bd",
    "metadata": {},
    "source": [
     "다음으로 name 피처를 살펴보자. 얼핏 봐서는 이름이라는 데이터를 어떻게 피처로 사용할 수 있을지 난감하다. 하지만 데이터를 자세히 살펴보면 이 피처 또한 데이터 간의 공통점이 있음을 발견할 수 있다. 바로 이름의 구성 중간에 들어가는 **호칭** 정보이다."
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918962f7",
+   "id": "e1eb1d45",
    "metadata": {},
    "source": [
     "데이터셋의 이름 중 Bradley, Miss.Bridget Delia 라는 이름을 예로 들어보자. 이 이름은 Bradley라는 성, Miss라는 호칭, Bridget Delia라는 이름으로 구성되어 있다. 그리고 모든 이름은 이러한 형태로 구성되어 있다. 당시 시대는 사회적 계급이 엄연히 존재하였기 때문에 호칭 정본느 매우 중요한 데이터로 활용될 수 있다. 호칭을 추출한 결과는 다음과 같다."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce6ac359",
+   "id": "5fd788e1",
    "metadata": {},
    "source": [
     "- name 피처 활용하기\n"
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3179a244",
+   "id": "ba97c795",
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2439a427",
+   "id": "556d31da",
    "metadata": {},
    "source": [
     "앞선 단계에서 추출한 호칭을 여섯 가지의 사회적 지위로 정의할 수 있다. 아래 코드의 give_grade()함수로 whole_df의 name피처를 A~F의 범주형 데이터로 변환하는 작업을 수행하자."
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a67f913",
+   "id": "40bed593",
    "metadata": {},
    "source": [
     "- name 피처 활용하기"
@@ -1238,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3ef22f59",
+   "id": "368885d3",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a3d6a4",
+   "id": "8e94ca56",
    "metadata": {},
    "source": [
     "이제 모델을 학습하기 위한 마지막 전처리 단계로 모든 범주형 피처들에 원-핫 인코딩을 적용하자."
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7c1596",
+   "id": "eb380361",
    "metadata": {},
    "source": [
     "- 원-핫 인코딩"
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a2a8624a",
+   "id": "a05cda2f",
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1433c3a3",
+   "id": "478b056f",
    "metadata": {},
    "source": [
     "'cabin','name'을 대상으로 피처 엔지니어링을 적용한 뒤, 다시 학습한 모델의 평과 결과는 아래와 같습니다. accuracy와 precision은 기존 모델에 비해 소폭 감소한 반면, F1 score와 AUC는 대폭 상승했다. 이를 통해 분류 모델의 성능이 많이 향상되었다는 것을 알 수 있다."
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657de5a8",
+   "id": "20773a9a",
    "metadata": {},
    "source": [
     "- 피처 엔지니어링이 완료된 데이터셋 학습"
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "292fe44f",
+   "id": "2f6c0dd7",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51aba510",
+   "id": "99c538da",
    "metadata": {},
    "source": [
     "다음의 코드는 분류 모델의 피처 영향력을 그래프로 살펴본 것이다. 우리는 이를 통해 피처 엔지니어링으로 생성된 'name', 'cabin'피처의 영향력이 가장 크다는 것을 알 수 있다."
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24dfc86",
+   "id": "3cd222cb",
    "metadata": {},
    "source": [
     "- 피처 영향력 살펴보기"
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "42d42e45",
+   "id": "8e571056",
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13575130",
+   "id": "cc6cf0c5",
    "metadata": {},
    "source": [
     "#### Step 4 평가: 모델 검증하기\n",
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be8f154c",
+   "id": "08ac8e1f",
    "metadata": {},
    "source": [
     "- K-flod 교차 검증 수행하기"
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1f66be6c",
+   "id": "484e7cc4",
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f80d6ef",
+   "id": "b5a68e4f",
    "metadata": {},
    "source": [
     "아래의 실행 결과는 교차 검증의 k번째 실행마다 AUC를 리스트에 저장하고, 이를 그래프로 나타낸 것이다. 그래프를 살펴본 결과, AUC가 큰 폭으로 변화하고 있는 것을 볼 수 있다. 따라서 이 모델은 다소 불안정한 모델이라고 할 수 있다. 다만 이러한 결과는 데이터의 개수가 적기 때문에 발생하는 현상이다. 게다가 모든 실행에서 공통적으로 Test AUC가 0.8 이상의 수치를 기록했기 때문에 이 분류 모델은 '과적합이 발생했지만 대체로 높은 정확도를 가지는 모델'이라고 할 수 있다."
@@ -1814,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "da9b81ac",
+   "id": "47fc5589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6a4a36",
+   "id": "a87e8693",
    "metadata": {},
    "source": [
     "학습 데이터와 테스트 데이터의 점수가 벌어지는 과적합 상황은 학습 곡선을 관찰함으로써 더 쉽게 관찰할 수 있다. 다음의 그래프는 학습 데이터 샘플의 개수가 증가함에 따라 학습과 테스트 두 점수가 어떻게 변화하는지를 관찰한 그래프이다. 이를 통해 데이터가 300개가 이상인 경우에는 과적합의 위험이 낮아진다는 것을 알 수 있다."
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e13538",
+   "id": "ec4be2fb",
    "metadata": {},
    "source": [
     "- 학습 곡선 분석하기"
@@ -1840,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b2e50720",
+   "id": "997788d9",
    "metadata": {},
    "outputs": [
     {
@@ -2075,12 +2075,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4146cb41",
+   "cell_type": "markdown",
+   "id": "90298451",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 출처: 이것이 데이터 분석이다 with 파이썬"
+   ]
   }
  ],
  "metadata": {
