--- a/Ehang .ipynb
+++ b/Ehang .ipynb
@@ -7,22 +7,10 @@
    "source": [
     "<center>\n",
     "<img src=\"https://file.mk.co.kr/meet/neds/2021/02/image_readtop_2021_169269_16138701304547187.jpeg\" width=\"400\" height=\"300\"><br>\n",
-    "</center>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee63fd72",
-   "metadata": {},
-   "source": [
-    "# ehang 이항주식 분석하기"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a71be2fc",
-   "metadata": {},
-   "source": [
+    "</center>\n",
+    "\n",
+    "# ehang 이항주식 분석하기\n",
+    "\n",
     "#### 순서\n",
     "\n",
     "- 주가데이터 받아오기\n",
@@ -33,18 +21,9 @@
     "\n",
     "- 분석 및 데이터 전처리\n",
     "\n",
-    "- 이동평균선 계산해서 att추가하기"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18d6eb88",
-   "metadata": {},
-   "source": [
-    "- yahoo Finance API는 종류가 다양하며 각 API에서 제공하는 데이터도 조금씩 다르다. 시계열 데이터 부터, 기업 재무제표를 제공하는 API등 다양하게 있다.\n",
+    "- 이동평균선 계산해서 att추가하기\n",
     "\n",
-    "\n",
-    "\n"
+    "- yahoo Finance API는 종류가 다양하며 각 API에서 제공하는 데이터도 조금씩 다르다. 시계열 데이터 부터, 기업 재무제표를 제공하는 API등 다양하게 있다."
    ]
   },
   {
@@ -60,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d9f75588",
+   "id": "0506b2b6",
    "metadata": {},
    "outputs": [
     {
@@ -290,8 +269,6 @@
     "                      progress=False)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "eh_df = eh_df.reset_index()\n",
     "\n",
     "eh_df.columns = ['day', 'Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume']\n",
@@ -307,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "866f8c58",
+   "id": "51e9aef1",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3e83cb96",
+   "id": "21b364da",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af81474",
+   "id": "755d379c",
    "metadata": {},
    "source": [
     "## 주가 데이터 시각화\n",
@@ -597,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "cf3d38c6",
+   "id": "a90f9fb7",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e956d91",
+   "id": "e3d1b21e",
    "metadata": {},
    "source": [
     "### 2. 캔들 차트를 사용한 시각화"
@@ -629,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c2b5fb33",
+   "id": "7cdf8c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e8dd0f6f",
+   "id": "366bab8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "7c668c68",
+   "id": "21b606ec",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfff8e91",
+   "id": "9fb8f44e",
    "metadata": {},
    "source": [
     "- 캔들차트는 주식가격의 주요한 가격 정보를 담고 있습니다. 장 시작할 때의 가격인 시가, 장 중 최고 가격인 고가, 장 중 최저 가격인 저가, 장 마감 때 가격인 종가가 그것입니다. \n",
@@ -704,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b56ffad7",
+   "id": "ad6270e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28aaf5b2",
+   "id": "221d3f8c",
    "metadata": {},
    "source": [
     "- 시간포멧 보기좋게 바꾸는 방법"
@@ -732,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d0038c65",
+   "id": "663825b9",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "18e17ecf",
+   "id": "dbc9d37a",
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +771,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b322259",
+   "metadata": {},
+   "source": [
+    "데이터 자료형 설명"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 165,
    "id": "9512dcb8",
    "metadata": {},
    "outputs": [
@@ -803,19 +788,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(339, 5)\n",
+      "(340, 11)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 339 entries, 2019-12-13 to 2021-04-20\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   Open       339 non-null    float64\n",
-      " 1   High       339 non-null    float64\n",
-      " 2   Low        339 non-null    float64\n",
-      " 3   Close      339 non-null    float64\n",
-      " 4   Adj Close  339 non-null    float64\n",
-      "dtypes: float64(5)\n",
-      "memory usage: 15.9 KB\n",
+      "DatetimeIndex: 340 entries, 2019-12-13 to 2021-04-21\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Open                340 non-null    float64\n",
+      " 1   High                340 non-null    float64\n",
+      " 2   Low                 340 non-null    float64\n",
+      " 3   Close               340 non-null    float64\n",
+      " 4   Adj Close           340 non-null    float64\n",
+      " 5   Volume              340 non-null    int64  \n",
+      " 6   tomorrow Adj Close  339 non-null    float64\n",
+      " 7   Fluctuation         339 non-null    float64\n",
+      " 8   Fluctuation Rate    339 non-null    float64\n",
+      " 9   Price               340 non-null    float64\n",
+      " 10  price               340 non-null    float64\n",
+      "dtypes: float64(10), int64(1)\n",
+      "memory usage: 31.9 KB\n",
       "None\n"
      ]
     },
@@ -845,9 +836,21 @@
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
        "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>tomorrow Adj Close</th>\n",
+       "      <th>Fluctuation</th>\n",
+       "      <th>Fluctuation Rate</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -857,18 +860,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-04-14</th>\n",
-       "      <td>29.520000</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>28.200001</td>\n",
-       "      <td>29.400000</td>\n",
-       "      <td>29.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-04-15</th>\n",
        "      <td>30.129999</td>\n",
        "      <td>30.129999</td>\n",
        "      <td>27.600000</td>\n",
+       "      <td>28.930000</td>\n",
+       "      <td>28.930000</td>\n",
+       "      <td>1632300</td>\n",
+       "      <td>27.910000</td>\n",
+       "      <td>-1.020000</td>\n",
+       "      <td>-0.035258</td>\n",
        "      <td>28.930000</td>\n",
        "      <td>28.930000</td>\n",
        "    </tr>\n",
@@ -879,12 +880,24 @@
        "      <td>25.520000</td>\n",
        "      <td>27.910000</td>\n",
        "      <td>27.910000</td>\n",
+       "      <td>3947800</td>\n",
+       "      <td>24.790001</td>\n",
+       "      <td>-3.119999</td>\n",
+       "      <td>-0.111788</td>\n",
+       "      <td>27.910000</td>\n",
+       "      <td>27.910000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-04-19</th>\n",
        "      <td>26.680000</td>\n",
        "      <td>26.730000</td>\n",
        "      <td>23.771999</td>\n",
+       "      <td>24.790001</td>\n",
+       "      <td>24.790001</td>\n",
+       "      <td>2985900</td>\n",
+       "      <td>24.580000</td>\n",
+       "      <td>-0.210001</td>\n",
+       "      <td>-0.008471</td>\n",
        "      <td>24.790001</td>\n",
        "      <td>24.790001</td>\n",
        "    </tr>\n",
@@ -895,22 +908,58 @@
        "      <td>23.600000</td>\n",
        "      <td>24.580000</td>\n",
        "      <td>24.580000</td>\n",
+       "      <td>2173500</td>\n",
+       "      <td>26.080000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>0.061025</td>\n",
+       "      <td>24.580000</td>\n",
+       "      <td>24.580000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-21</th>\n",
+       "      <td>24.260000</td>\n",
+       "      <td>26.299999</td>\n",
+       "      <td>23.309999</td>\n",
+       "      <td>26.080000</td>\n",
+       "      <td>26.080000</td>\n",
+       "      <td>1458705</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.080000</td>\n",
+       "      <td>26.080000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Open       High        Low      Close  Adj Close\n",
-       "day                                                              \n",
-       "2021-04-14  29.520000  31.000000  28.200001  29.400000  29.400000\n",
-       "2021-04-15  30.129999  30.129999  27.600000  28.930000  28.930000\n",
-       "2021-04-16  26.010000  28.350000  25.520000  27.910000  27.910000\n",
-       "2021-04-19  26.680000  26.730000  23.771999  24.790001  24.790001\n",
-       "2021-04-20  24.219999  25.879999  23.600000  24.580000  24.580000"
+       "                 Open       High        Low      Close  Adj Close   Volume  \\\n",
+       "day                                                                          \n",
+       "2021-04-15  30.129999  30.129999  27.600000  28.930000  28.930000  1632300   \n",
+       "2021-04-16  26.010000  28.350000  25.520000  27.910000  27.910000  3947800   \n",
+       "2021-04-19  26.680000  26.730000  23.771999  24.790001  24.790001  2985900   \n",
+       "2021-04-20  24.219999  25.879999  23.600000  24.580000  24.580000  2173500   \n",
+       "2021-04-21  24.260000  26.299999  23.309999  26.080000  26.080000  1458705   \n",
+       "\n",
+       "            tomorrow Adj Close  Fluctuation  Fluctuation Rate      Price  \\\n",
+       "day                                                                        \n",
+       "2021-04-15           27.910000    -1.020000         -0.035258  28.930000   \n",
+       "2021-04-16           24.790001    -3.119999         -0.111788  27.910000   \n",
+       "2021-04-19           24.580000    -0.210001         -0.008471  24.790001   \n",
+       "2021-04-20           26.080000     1.500000          0.061025  24.580000   \n",
+       "2021-04-21                 NaN          NaN               NaN  26.080000   \n",
+       "\n",
+       "                price  \n",
+       "day                    \n",
+       "2021-04-15  28.930000  \n",
+       "2021-04-16  27.910000  \n",
+       "2021-04-19  24.790001  \n",
+       "2021-04-20  24.580000  \n",
+       "2021-04-21  26.080000  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1012,12 @@
    "id": "ce1c371f",
    "metadata": {},
    "source": [
-    "(High, Low, Open, Close, Volume, Adj Close) 는  (고가, 저가, 시가, 종가, 거래량, 수정 종가)"
+    "- High: 고가 \n",
+    "- Low: 저가\n",
+    "- Open: 시가 \n",
+    "- Close: 종가\n",
+    "- Volume: 거래량\n",
+    "- Adj Close: 수정 종가"
    ]
   },
   {
@@ -1558,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "df40bcb6",
+   "id": "883104b9",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "765f2036",
+   "id": "e789c158",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "845e6cdc",
+   "id": "ce0fe1fe",
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "e8d4e55b",
+   "id": "11e6c759",
    "metadata": {},
    "outputs": [
     {
@@ -2468,9 +2522,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f69b7120",
+   "metadata": {},
+   "source": [
+    "### ARIMA 예측 모델"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "aa5613a2",
+   "id": "b2f807ad",
    "metadata": {},
    "outputs": [
     {
@@ -2578,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "b89e11ff",
+   "id": "9b12eb5d",
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6045a6",
+   "id": "bb30c9aa",
    "metadata": {},
    "source": [
     "### 이항주가의 변동률과, ARIMA 모델의 잔차 그래프\n",
@@ -2622,7 +2684,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "97831d09",
+   "id": "1b931304",
    "metadata": {},
    "outputs": [
     {
@@ -2768,7 +2830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac87c119",
+   "id": "f355c7e5",
    "metadata": {},
    "source": [
     "### ARIMA 모델 평가\n",
@@ -2784,7 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "3c261ff5",
+   "id": "8c80f46d",
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +3012,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "ec88c2b0",
+   "id": "d81af606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2974,7 +3036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01fccf4c",
+   "id": "1641453e",
    "metadata": {},
    "source": [
     "그리고 다음 코드는 이를 그래프로 시각화 한 것이다. 파란색 그래프는 모델이 예상한 최고 가격, 즉 상한가의 그래프이다. 그리고 빨간색은 모델이 예측한 하한가 그래프이고, 초록색은 실제 5일간의 가격 그래프, 노란색은 모델이 예측한 가격 그래프를 나타낸 것이다."
@@ -2983,7 +3045,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "e24e23c8",
+   "id": "c54249ec",
    "metadata": {},
    "outputs": [
     {
@@ -3025,7 +3087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bf9173",
+   "id": "01b52830",
    "metadata": {},
    "source": [
     "### Facebook Prophet\n",
@@ -3036,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413d8a61",
+   "id": "bd668101",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3044,7 +3106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e417e0",
+   "id": "8dd1f89b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3066,18 +3128,20 @@
    "source": [
     "---\n",
     "\n",
-    "### 출처\n",
-    "- [Chapter 3.2 비트코인 시세 예측하기 again 2018](https://seethefuture.tistory.com/52)\n",
-    "- 참고블로그,출처:https://sosoeasy.tistory.com/332\n",
-    "- 21.02.17 공매도 리포트에 주가 63% 폭락   [뉴스출처]:\n",
-    "(https://biz.chosun.com/site/data/html_dir/2021/02/17/2021021700991.html?utm_source=naver&utm_medium=original&utm_campaign=biz)\n",
-    "- 21.02.18 이항 주가 하루 만에 67% 급반등…롤러코스터 탄 서학개미 [뉴스출처]: https://www.mbn.co.kr/news/economy/4427097"
+    "#### Reference\n",
+    "\n",
+    "- 블로그\n",
+    "    - [Chapter 3.2 비트코인 시세 예측하기 again 2018](https://seethefuture.tistory.com/52)\n",
+    "    - [1. 삼성전자 주식데이터 분석 - 분석하기](https://sosoeasy.tistory.com/332)\n",
+    "- 뉴스\n",
+    "    - [21.02.17 공매도 리포트에 주가 63% 폭락](https://biz.chosun.com/site/data/html_dir/2021/02/17/2021021700991.html?utm_source=naver&utm_medium=original&utm_campaign=biz)\n",
+    "    - [21.02.18 이항 주가 하루 만에 67% 급반등…롤러코스터 탄 서학개미](https://www.mbn.co.kr/news/economy/4427097)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e11b6b",
+   "id": "f6eb3e36",
    "metadata": {},
    "outputs": [],
    "source": []
