Chapter4_titanic modify

--- a/Chapter 4 (titanic).ipynb
+++ b/Chapter 4 (titanic).ipynb
@@ -460,7 +460,7 @@
     "from scipy import stats\n",
     "\n",
     "# 두 집단의 피처를 비교해주며 탐색작업을 자동화하는 함수를 정의한다.\n",
-    "def valid_feature(df, col_name, distribution_check=True):\n",
+    "def valid_features(df, col_name, distribution_check=True):\n",
     "    \n",
     "    # 두 집단 (survived=1, survive=0)의 분포 그래프를 출력한다.\n",
     "    g = sns.FaceGrid(df, col='survived')\n",
